scss/combobox/_layout.scss
@include exports("combobox/layout") {

    .k-combobox {
        .k-dropdown-wrap {
            > .k-i-loading {
                top: 50%;
                transform: translateY(-50%);
                margin-right: $padding-x;
            }
        }

        .k-input {}

        .k-select {}

        &[dir='rtl'] {
            > .k-dropdown-wrap {
                > .k-i-close {
                    left: calc(#{$icon-size} + #{$padding-y-lg * 3});
                    right: auto;
                }
            }
        }

        // Compact
        @include compact {

            .k-input {
                padding: $input-padding-y-sm $input-padding-x-sm;
            }

            .k-select {
                padding: $button-padding-y-sm;
            }
        }

        > .k-dropdown-wrap {
            > .k-i-close {
                right: calc(#{$icon-size} + #{$padding-y-lg * 3});
            }
        }
    }
}

